build.gradle refactoring