@@ -12,6 +12,13 @@ allprojects {
 
     java {
         targetCompatibility = JavaVersion.VERSION_14
+        sourceCompatibility = JavaVersion.VERSION_14
+    }
+
+
+    compileJava {
+        options.compilerArgs << '-parameters'
+//        options.compilerArgs << '--enable-preview'
     }
 
 
@@ -31,6 +38,10 @@ allprojects {
     dependencies {
         compile     group: 'com.google.code.findbugs',      name: 'jsr305',                         version: '3.0.2'
         compile     group: 'org.apache.logging.log4j',      name: 'log4j-api',                      version: '2.12.1'
+        compile     group: 'com.google.guava',              name: 'guava',                          version: '27.0.1-jre'
+
+        compileOnly         group: 'org.projectlombok',     name: 'lombok',                         version: '1.18.8'
+        annotationProcessor group: 'org.projectlombok',     name: 'lombok',                         version: '1.18.8'
 
         testCompile group: 'junit',                         name: 'junit',                          version: '4.12'
     }
